# devStage

backend/: case.py  pyproject.toml  run.py
backend/src/main/routes/: event.py
backend/src/model/configs/: connection.py
backend/src/model/entities/: eventos.py  inscritos.py
backend/src/model/repositories/: eventos_repository.py  eventos_repository_test.py
