[tool.poetry]
name = "backend-devstage"
version = "0.1.0"
description = ""
authors = ["Roger Correa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flask = "^3.1.0"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
